# dictation-to-shell

./: README.md  pyproject.toml
dictation_to_shell/: main.py
